update link of the repository exploring on the template

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="flex column going-center">
             <h2>Testes de Verificação</h2>
-            <a href="">>> código fonte</a>
+            <a href="https://github.com/lucasFarias072/verification-tests">>> código fonte dos testes</a>
         </div>
 
         <div id="verification-test-unit-test" class="feat-smooth feat-space">
